# perch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: .beads-credential-key  .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.beads/.br_history/: issues.20260316_204149_885279000.jsonl  issues.20260316_204202_765939000.jsonl  issues.20260316_204206_552899000.jsonl  issues.20260316_204209_904260000.jsonl  issues.20260316_204213_037705000.jsonl  issues.20260316_204215_706390000.jsonl  issues.20260316_204218_261473000.jsonl  issues.20260316_204221_626990000.jsonl  issues.20260316_204223_325952000.jsonl  issues.20260316_204225_270428000.jsonl  issues.20260316_204227_493016000.jsonl  issues.20260316_204234_969072000.jsonl  issues.20260316_204235_842767000.jsonl  issues.20260316_204236_652395000.jsonl  issues.20260316_204237_468492000.jsonl  issues.20260316_204237_953963000.jsonl  issues.20260316_204238_566899000.jsonl  issues.20260316_204239_536404000.jsonl  issues.20260316_204240_084290000.jsonl  issues.20260316_204240_584226000.jsonl  issues.20260316_204241_194573000.jsonl  issues.20260316_212401_494296000.jsonl  issues.20260316_212711_892503000.jsonl  issues.20260316_212740_682994000.jsonl  issues.20260316_212858_783569000.jsonl  issues.20260316_212921_731687000.jsonl  issues.20260316_213128_094542000.jsonl  issues.20260316_213157_237175000.jsonl  issues.20260316_213621_227344000.jsonl  issues.20260316_213656_910412000.jsonl  issues.20260316_213831_618215000.jsonl  issues.20260316_213902_263857000.jsonl  issues.20260316_214129_832196000.jsonl  issues.20260316_214156_178554000.jsonl  issues.20260316_214341_668346000.jsonl  issues.20260316_214410_090861000.jsonl  issues.20260316_214556_639539000.jsonl  issues.20260316_214624_356311000.jsonl  issues.20260316_214734_066252000.jsonl  issues.20260316_214803_769283000.jsonl  (+1 more)
.claude/: settings.json
.config/: wt.toml
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
bv-pages/: beads.sqlite3  beads.sqlite3.config.json  index.html
plans/: file-viewer-tree-git-enhancements.md  perch-plan.md
scripts/: test-changed.sh
src/perch/: app.py  (+6 more)
tasks/: prd-file-viewer-file-tree-and-git-tab-enhancements.md  prd-perch-a-vantage-point-for-agentic-workflows.md
tests/: conftest.py  test_app.py  test_bindings.py  test_branch_diff_picker.py  test_cli.py  test_commands.py  test_confirm_screen.py  test_editor_service.py  test_file_search.py  test_file_tree.py  test_file_viewer.py  test_git_service.py  test_git_status.py  test_github_panel.py  test_github_service.py  test_help_screen.py  test_pr_context.py  test_splitter.py  test_viewer.py  test_worktree_picker.py
(+36 files in other folders)
